--- a/src/main/resources/templates/general/servers/managemodules/managemodules.html
+++ b/src/main/resources/templates/general/servers/managemodules/managemodules.html
@@ -20,8 +20,8 @@
             <div class="col-md-4">
                 <div class="card module-card mb-4">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Module 1</h5>
-                        <p class="card-text">This is a description for Module 1. It gives a brief overview of what this module does.</p>
+                        <h5 class="card-title">Antispam Module</h5>
+                        <p class="card-text">This module filters out unwanted emails and messages, helping to maintain a clean inbox and reduce spam-related issues.</p>
                         <a href="#" class="btn btn-settings">Settings</a>
                     </div>
                 </div>
@@ -29,8 +29,8 @@
             <div class="col-md-4">
                 <div class="card module-card mb-4">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Module 2</h5>
-                        <p class="card-text">This is a description for Module 2. It provides details about the functionality of this module.</p>
+                        <h5 class="card-title">Antivirus Module</h5>
+                        <p class="card-text">This module protects your system against viruses and malware, ensuring a secure environment for your applications and data.</p>
                         <a href="#" class="btn btn-settings">Settings</a>
                     </div>
                 </div>
@@ -38,8 +38,8 @@
             <div class="col-md-4">
                 <div class="card module-card mb-4">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Module 3</h5>
-                        <p class="card-text">This is a description for Module 3. It outlines the key features and uses of this module.</p>
+                        <h5 class="card-title">Verify System Module</h5>
+                        <p class="card-text">This module verifies user identities and system integrity, ensuring that only authorized users have access to sensitive data.</p>
                         <a href="#" class="btn btn-settings">Settings</a>
                     </div>
                 </div>
@@ -47,8 +47,8 @@
             <div class="col-md-4">
                 <div class="card module-card mb-4">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Module 4</h5>
-                        <p class="card-text">This is a description for Module 4. It explains the functionalities and purpose of this new module.</p>
+                        <h5 class="card-title">Voice Action Module</h5>
+                        <p class="card-text">This module enables voice commands and actions, allowing users to control the system with voice inputs for a hands-free experience.</p>
                         <a href="#" class="btn btn-settings">Settings</a>
                     </div>
                 </div>
