--- a/src/main/resources/static/general/servers/css/servers.css
+++ b/src/main/resources/static/general/servers/css/servers.css
@@ -1,3 +1,15 @@
+
+.no-servers-message {
+    text-align: center;
+    padding: 20px;
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    border-radius: 2px;
+    margin: 5px 0;
+    font-size: 1.2em;
+}
+
 .server-card {
     border: 1px solid #f8bbd0;
     border-radius: 12px;
