--- a/src/main/resources/templates/general/commands/commands.html
+++ b/src/main/resources/templates/general/commands/commands.html
@@ -84,7 +84,7 @@
                             <div class="argument">
                                 <span class="arg-label">Duration:</span>
                                 <span class="arg-detail">How long the mute will last.</span>
-                                <span class="arg-type required">Required</span>
+                                <span class="arg-type optional">Optional</span>
                             </div>
                             <div class="argument">
                                 <span class="arg-label">Reason:</span>
