--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -43,6 +43,9 @@
 
     <div class="text-center mt-4">
       <a href="/support" class="support-link" th:text="#{login.support.link}"></a>
+      <div class="password-warning">
+        <i class="fas fa-exclamation-circle"></i> <span th:text="#{login.warranty.message}"></span>
+      </div>
     </div>
 
   </div>
