--- a/src/main/resources/static/auth/css/register.css
+++ b/src/main/resources/static/auth/css/register.css
@@ -70,19 +70,107 @@ h2 {
 }
 
 .bg-image {
-    background-image: url('https://cdn.pixabay.com/photo/2017/01/06/19/15/woman-1958723_1280.jpg'); /* Example image */
-    background-size: cover;
-    background-position: center;
+    position: relative;
+    background:
+            linear-gradient(135deg, rgba(238, 174, 202, 0.7), rgba(148, 187, 233, 0.7)),
+            linear-gradient(225deg, rgba(148, 187, 233, 0.7), rgba(238, 174, 202, 0.7));
+    background-size: 98.8% 100%;
+    background-repeat: no-repeat;
     height: 100vh;
+    overflow: hidden;
 }
 
 .overlay {
-    background: rgba(239, 50, 217, 0.5);
+    position: relative;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    backdrop-filter: blur(5px);
+}
+
+
+.overlay-content {
+    z-index: 1;
+}
+
+
+.large-icon-overlay {
+    position: absolute;
+    top: 200px;
+    right: 450px;
+    font-size: 5rem;
+    color: #9900ff;
+    opacity: 0.8;
+    z-index: 2;
+}
+
+
+.large-icon-overlay i {
+    margin: 0;
+}
+
+.overlay h1 {
+    font-size: 3rem;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.overlay p {
+    font-size: 1.25rem;
+    margin: 20px 0 0;
+    padding: 0;
+}
+
+.overlay a {
+    color: #00aaff;
+    text-decoration: underline;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.overlay a:hover {
+    color: #007bb5;
+}
+
+
+.icon-group {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.icon-text {
+    font-size: 1.25rem;
+    margin-top: 10px;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.icon-text i {
+    margin-right: 10px;
+    font-size: 1.5rem;
+    color: #00aaff;
+}
+
+.icon-text a {
+    color: #00aaff;
+    text-decoration: underline;
+}
+
+.icon-text a:hover {
+    color: #007bb5
 }
 
 .container-fluid {
